--- a/cosmogen.html
+++ b/cosmogen.html
@@ -126,6 +126,10 @@
         <div class="grid">
             <div class="card" onclick="showModal('Surpreet Kaur', '01 Jan 2000', 'Joined: 20 Sep 2023', 'Graphics is my passion!')"> <img src="surpreet.jpg" alt="Surpreet Kaur"><p><strong>Surpreet Kaur</strong><br> Graphics</p></div>
             <div class="card" onclick="showModal('Rahul Kaushal', '05 Mar 1999', 'Joined: 20 Sep 2023', 'Building strong partnerships!')"> <img src="rahul.jpg" alt="Rahul Kaushal"><p><strong>Rahul Kaushal</strong><br> Sponsorship & Partnerships</p></div>
+            <div class="card" onclick="showModal('Sanchita Kaushal', '01 Jan 2000', 'Joined: 20 Sep 2023', 'Graphics is my passion!')"> <img src="Sanchita.jpg" alt="Sanchita Kaushal"><p><strong>Sanchita Kaushal</strong><br> Department of Sponsorship & Partnerships</p></div>
+            <div class="card" onclick="showModal('Riya', '01 Jan 2000', 'Joined: 20 Sep 2023', 'Graphics is my passion!')"> <img src="Riya.jpg" alt="Riya"><p><strong>Riya</strong><br> Department of Event Management</p></div>
+            <div class="card" onclick="showModal('Divleen Kaur', '01 Jan 2000', 'Joined: 20 Sep 2023', 'Graphics is my passion!')"> <img src="divleen.jpg" alt="Divleen Kaur"><p><strong>Divleen Kaur</strong><br> Department of Analytics</p></div>
+            <div class="card" onclick="showModal('Ravneet Kaur', '01 Jan 2000', 'Joined: 20 Sep 2023', 'Graphics is my passion!')"> <img src="Ravneet.jpg" alt="Ravneet Kaur"><p><strong>Ravneet Kaur</strong><br> Interview Committee</p></div>
         </div>
     </section>
 
