--- a/cosmogen.html
+++ b/cosmogen.html
@@ -169,6 +169,18 @@ h2 {
     50% { transform: translateY(-5px); }
 }
 
+.moving-heading {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 10s ease-out, transform 5s ease-out, filter 10s ease-in-out;
+}
+
+.moving-heading.visible {
+    opacity: 1;
+    transform: translateY(0);
+    filter: brightness(2);
+}
+
 /* Apply animation to headings */
 .moving-heading {
     display: inline-block;
@@ -214,6 +226,16 @@ footer {
 .highlight {
     background: rgba(255, 223, 0, 0.6);
     transition: background 0.5s ease-in-out;
+}
+.logo {
+    font-size: 3rem;
+    font-weight: bold;
+    text-align: center;
+    transition: transform 2.0s ease-in-out;
+}
+
+.logo:hover {
+    transform: rotate(360deg);
 }
 
     </style>
@@ -284,8 +306,9 @@ footer {
     </footer>
 
     <script>
-
+       
        document.addEventListener("DOMContentLoaded", function () {
+        
     // Function to show modal with dynamic content
     function showModal(name, dob, join, message) {
         const modal = document.getElementById('modal');
@@ -364,10 +387,25 @@ footer {
     document.getElementById("copy-btn").addEventListener("click", copyDetails);
 });
 
+document.addEventListener("DOMContentLoaded", function () {
+        const headings = document.querySelectorAll(".moving-heading");
+
+        const observer = new IntersectionObserver((entries) => {
+            entries.forEach((entry) => {
+                if (entry.isIntersecting) {
+                    entry.target.classList.add("visible");
+                }
+            });
+        }, { threshold: 0.5 });
+
+        headings.forEach((heading) => {
+            observer.observe(heading);
+        });
+    });
+
     </script>
 </body>
 </html>
-
 
 
 
